# agent-hot-note

./: .env.example  .gitignore  DEV_NOTES.md  README.md  pyproject.toml
eval/: router_labeled.sample.jsonl
eval/reports/: router_eval_20260223_134316.json  router_eval_20260223_134316.md
scripts/: eval_router.py
src/agent_hot_note/: __init__.py  config.py
src/agent_hot_note/api/: app.py  schemas.py
src/agent_hot_note/crew/: __init__.py  sequential.py
src/agent_hot_note/pipeline/: __init__.py  fallback.py
src/agent_hot_note/providers/: __init__.py
src/agent_hot_note/providers/llm/: deepseek.py
src/agent_hot_note/providers/search/: mock.py  tavily.py
src/agent_hot_note/retrieval/: __init__.py  search_orchestrator.py
src/agent_hot_note/service/: generator.py
src/agent_hot_note/workflow/: __init__.py  generation.py
tests/: test_api.py  test_crew.py  test_fallback.py  test_generator.py  test_workflow.py
