[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hot-note"
version = "0.1.0"
description = "Hot note agent service (phase 1)"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "langgraph==0.2.67",
  "langchain-openai==0.3.3",
  "tavily-python==0.7.12",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
